Update relative path of images in index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <ul class="grid">
         <li class="article-container">
           <article>
-            <img src="../DASHBOARD PROJECT/bridge.jpg" alt="Bridge" />
+            <img src="images/bridge.jpg" alt="Bridge" />
             <div>
               <h3>Title of the news!</h3>
               <p>
@@ -24,7 +24,7 @@
         </li>
         <li class="article-container">
           <article>
-            <img src="../DASHBOARD PROJECT/water.jpg" alt="Water" />
+            <img src="images/water.jpg" alt="Water" />
             <div>
               <h3>Title of the news!</h3>
               <p>
@@ -36,7 +36,7 @@
         </li>
         <li class="article-container">
           <article>
-            <img src="../DASHBOARD PROJECT/scene.jpg" alt="Scene" />
+            <img src="images/scene.jpg" alt="Scene" />
             <div>
               <h3>Title of the news!</h3>
               <p>
@@ -48,7 +48,7 @@
         </li>
         <li class="article-container">
           <article>
-            <img src="../DASHBOARD PROJECT/ship.jpg" alt="Ship" />
+            <img src="images/ship.jpg" alt="Ship" />
             <div>
               <h3>Title of the news!</h3>
               <p>
@@ -60,7 +60,7 @@
         </li>
         <li class="article-container">
             <article>
-              <img src="../DASHBOARD PROJECT/nature1.jpg" alt="Nature1" />
+              <img src="images/nature1.jpg" alt="Nature1" />
               <div>
                 <h3>Title of the news!</h3>
                 <p>
@@ -72,7 +72,7 @@
           </li>
           <li class="article-container">
             <article>
-              <img src="../DASHBOARD PROJECT/nature2.jpg" alt="Nature2" />
+              <img src="images/nature2.jpg" alt="Nature2" />
               <div>
                 <h3>Title of the news!</h3>
                 <p>
@@ -84,7 +84,7 @@
           </li>
           <li class="article-container">
             <article>
-              <img src="../DASHBOARD PROJECT/nature3.jpg" alt="Nature3" />
+              <img src="images/nature3.jpg" alt="Nature3" />
               <div>
                 <h3>Title of the news!</h3>
                 <p>
